fixing spelling mistake

--- a/QM/lecture1.tex
+++ b/QM/lecture1.tex
@@ -12,7 +12,7 @@ QM :-
 \item It has been confirmed theoretically and experimentally.
 \item It has a wide range of applications.
 	\begin{itemize}
-	\item Chemistry (elections)
+	\item Chemistry (electrons)
 	\item Biological processes
 	\item Information Sciences
 	\item Quantum Computing
