--- a/Statistical Mechanics/lecture2.tex
+++ b/Statistical Mechanics/lecture2.tex
@@ -4,7 +4,9 @@ Lecture 2
 
 \end{center}
 
-Extensive parameter are the basic variables that characterise a system in thermal equilibrium. Collectively denoted as $X_i$ where $i$ ranges over all such variables.
+Extensive parameters are the basic variables that characterise a system in thermal equilibrium. They are collectively denoted as $X_i$ where $i$ ranges over all such variables.
+
+\vspace{\baselineskip}
 
 Some examples of these are:
 
@@ -34,7 +36,7 @@ Kelvin and Clausius: There does not exist a physical process whose sole effect i
 
 Clausius introduced the concept of entropy. If the heat transfer in a process is $\delta Q$ then the systems gains entropy. This gives Clausius relation: $$dS = \frac{\delta Q}{T}$$
 
-$\delta Q$ is the change of $Q$ in a process or $\delta Q = Q_2 - Q-1$. $dU$ is an exact differential. If $U$ is a function of some variables $\{y_i\}$ then $dU = \sum_i \frac{\partial U}{\partial y_i} d y_i$.
+$\delta Q$ is the change of $Q$ in a process or $\delta Q = Q_2 - Q_1$. $dU$ is an exact differential. If $U$ is a function of some variables $\{y_i\}$ then $dU = \sum_i \frac{\partial U}{\partial y_i} d y_i$.
 
 \subsection{Entropy}
 
@@ -60,7 +62,7 @@ Consider a system whose extensive parameters are $U,V,N$. $S(U,V,N)$ specifies t
 
 \subsection{Intensive Parameters}
 
-The intensive parameters (entropic) $Z_i$ are conjugate to the extensive parameters $X_i$. That is $Z_i = \frac{\partial S}{\partial X_i}$.
+The intensive parameters (entropic) $Z_i$ are conjugate to the extensive parameters $X_i$. That is \\ $Z_i = \frac{\partial S}{\partial X_i}$.
 
 $Z_i$ are homogeneous functions of degree 0. 
 
