--- a/Statistical Mechanics/lecture1.tex
+++ b/Statistical Mechanics/lecture1.tex
@@ -79,12 +79,8 @@ General concept in thermodynamics giving a relation between $P$, $V$, $T$ (\& mo
 
 \subsection{Thermodynamical Postulates}
 
-\begin{enumerate}
-
-\item Macroscopic systems tend to evolve towards configurations (states) whose properties are independent of initial conditions (\& prior history). Moreover, these states are characterized by a small number of parameters. We call these equilibrium configurations.
+ Macroscopic systems tend to evolve towards configurations (states) whose properties are independent of initial conditions (\& prior history). Moreover, these states are characterized by a small number of parameters. We call these equilibrium configurations.
 
 Equilibrium is a steady state, where things do not change macroscopically.
 
 States refer to configurations in the phase space (roughly speaking it is the collection of positions and velocities of the individual particles). Typically this is a $6N$ dimensional space. 
-
-\end{enumerate}
