fix speed of light

--- a/QM/lecture2.tex
+++ b/QM/lecture2.tex
@@ -40,7 +40,7 @@ In quantum mechanics however, uncertainty is fundamental and we have to use a pr
 
 \subsection{Experimental foundations}
 
-Light has both the structure of a wave and a particle. In electromagnetism the waves are $\vec{E}$ and $\vec{B}$ waves with the speed of light $c = 3 \time 10^8 m/s$. However, in other ways it is better to see light as particles called ``photons''.
+Light has both the structure of a wave and a particle. In electromagnetism the waves are $\vec{E}$ and $\vec{B}$ waves with the speed of light $c = 3 \times 10^8 m/s$. However, in other ways it is better to see light as particles called ``photons''.
 
 \subsubsection{Double-slit experiment}
 
