--- a/Differential Geometry/Diff-geo.tex
+++ b/Differential Geometry/Diff-geo.tex
@@ -13,6 +13,7 @@
 \usepackage{wrapfig}
 \usepackage{url}
 \usepackage{biblatex}
+\usepackage{epstopdf}
 \renewcommand{\leq}{\leqslant}
 \renewcommand{\geq}{\geqslant}
 
