9:22am diff geo
I have a cold

--- a/Differential Geometry/lecture2.tex
+++ b/Differential Geometry/lecture2.tex
@@ -4,3 +4,14 @@ Lecture 2
 
 \end{center}
 
+Recall $\alpha (s) = (\cos s, \sin s)$ was the unit circle. But the parametrisation of the unit circle is not unique: Trace of $\beta (u) = (\cos (e^u), \sin (e^u))$ is also the unit circle.
+
+\subsection{Patameter change}
+
+Definition: Let $\alpha : I \rightarrow \mathbb{R}^n$ be smooth and regular. A patameter change for $\alpha$ is a map $h : J \rightarrow I$ and $J \subset \mathbb{R}$ an open interval such that: $h$ is smooth, $h(t)' \neq 0$ $\, \, \forall t \in J$ and $h(J) = I$.
+
+Remark: $\tilde{\alpha} = \alpha \cdot h : J \rightarrow \mathbb{R}^n$ is a patametrisation of $\alpha (I) = \tilde{\alpha} (J)$, that is that the trace is not changed.
+
+For regular curves, there is a particular parametrisation such that the curve is unit speed parametrised.
+
+Definition: Let $\alpha : I \rightarrow \mathbb{R}^n$ be smooth and regular. The arc length of $\alpha$ measured from $\alpha (u_0)$ with $u_0 \in I$ is the function $l : I \rightarrow \mathbb{R}$, with $$l (u) = \int_{u_0}^u || \alpha ' (t) || dt$$
