--- a/Dynamical Systems/lecture1.tex
+++ b/Dynamical Systems/lecture1.tex
@@ -16,7 +16,7 @@ Variables $x_i$, $y_i$. Some initial conditions $x_0 = 1$ and $y_0 = 1$.
 
 \vspace{\baselineskip}
 
-``Law of evolution'' $y_n = x_{n-1}$ and $x_n = y_{n-1 + x_{n-1}$.
+``Law of evolution'' $y_n = x_{n-1}$ and $x_n = y_{n-1} + x_{n-1}$.
 
 This is a discrete time dynamical system or a `recurence relation'. This dynamical system produces the fibonacci numbers.
 
