--- a/Electromagnetism/lecture1.tex
+++ b/Electromagnetism/lecture1.tex
@@ -36,7 +36,9 @@ Assuming $V$ is fixed gives $\int \vec{j} \cdot \vec{n} \, \, dS = - \int \frac{
 
 This must be true for all volumes $V$ and therefore:
 
-$$\vec{\nabla} \cdot \vec{j} = - \frac{\partial \rho}{\partial t}$$
+\begin{equation}
+\vec{\nabla} \cdot \vec{j} = - \frac{\partial \rho}{\partial t}
+\end{equation}
 
 This is the continuity equation.
 
