--- a/Electromagnetism/lecture2.tex
+++ b/Electromagnetism/lecture2.tex
@@ -93,21 +93,21 @@ With $\sigma (\vec{r})$ a surface charge density.
 The electric flux is defined as
 
 \begin{equation}
-\displaystyle \int_S \vec{E} \cdot \vec{n} dS
+\displaystyle \int_S \vec{E} \cdot \vec{n} \, \, dS
 \end{equation}
 
 This gives the ``flow'' of $\vec{E}$ through $S$.
 
 \vspace{\baselineskip}
 
-Consider a closed surface $S$ enclosing a point charge $q$. Calculate $\oint_S \vec{E} \cdot \vec{n} dS$. Define coords with $q$ at origin. Now $$\vec{E}(\vec{r}) = \frac{q \vec{r}}{r^3}$$
+Consider a closed surface $S$ enclosing a point charge $q$. Calculate $\oint_S \vec{E} \cdot \vec{n} \, \, dS$. Define coordinates with $q$ at origin. Now $$\vec{E}(\vec{r}) = \frac{q \vec{r}}{r^3}$$
 
-Now $\vec{E} \cdot \vec{n} = \frac{q}{r^2} \cos \theta$. $dS \cos \theta$ is equal to an area of patch on a sphere of radius $r$. So $dS \cos \theta = r^2 d \Omega = r^2 \sin \bar{\theta} d \bar{\theta} d \phi$ (using spherical polars). So $\vec{E} \cdot \vec{n} dS = \frac{q}{r^2} \cos \theta dS = \frac{q}{r^2} \cdot r^2 d \Omega = q \sin \bar{\theta} d \bar{\theta} d \phi$ and there is no longer an $r^2$.
+And $\vec{E} \cdot \vec{n} = \frac{q}{r^2} \cos \theta \, \,$. $dS \cos \theta$ is equal to an area of patch on a sphere of radius $r$. So $dS \cos \theta = r^2 d \Omega = r^2 \sin \bar{\theta} d \bar{\theta} d \phi$ (using spherical polars). So $\vec{E} \cdot \vec{n} dS = \frac{q}{r^2} \cos \theta dS = \frac{q}{r^2} \cdot r^2 d \Omega = q \sin \bar{\theta} d \bar{\theta} d \phi$ and there is no longer a $r^2$.
 
 If $S$ is not too wonky, $\bar{\theta}, \phi$ is a good coordinate system on the whole of $S$. Thus
 
 \begin{equation}
-\oint_S \vec{E} \cdot \vec{n} dS = \int_0^{\pi} d \bar{\theta} \int_0^{2 \pi} d \phi q \sin \bar{\theta} d \bar{\theta} d \phi = 4 \pi q
+\oint_S \vec{E} \cdot \vec{n} \, \, dS = \int_0^{\pi} d \! \bar{\theta} \int_0^{2 \pi} d \! \phi \, \, q \sin \bar{\theta} = 4 \pi q
 \end{equation}
 
 As an exercise consider a general $S$ where a line from $q$ may pass through the surface multiple times.
