--- a/Differential Geometry/lecture3.tex
+++ b/Differential Geometry/lecture3.tex
@@ -39,3 +39,5 @@ So $\kappa = \frac{dt}{ds} \cdot n(s) = \frac{x'(u) y''(u) - x''(u) y'(u)}{((x'(
 $\alpha (u) = (a \cos u, b \sin u)$ $\implies$ $\alpha'(u) = (- a \sin u, b \cos u)$.
 
 So $\kappa = \frac{(-a \sin u)(-b \sin u) - (-a \cos u)(b \cos u)}{(a^2 \sin^2 u + b^2 \cos^2 u)^{3/2}} = \frac{ab}{(a^2 \sin^2 u + b^2 \cos^2 u)^{3/2}}$
+
+\textbf{Fundamental theorem of local theory of plane curves}: Given a smooth function $\kappa : I \rightarrow \mathbb{R}$ , $I \subset \mathbb{R}$ an open interval, $u_0 \in I$, $a \in \mathbb{R}^2$, $v_0 \in \mathbb{R}^2$ a unit vector. Then ther exists a unique smooth unit speed curve $\alpha I : \rightarrow \mathbb{R}^2$ with curvature $\kappa$, satisfying $\alpha(u_0) = a$ and $\alpha'(u_0) = v_0$.
