--- a/Differential Geometry/lecture4.tex
+++ b/Differential Geometry/lecture4.tex
@@ -37,3 +37,5 @@ $\kappa'(u) = - \frac{3}{2} \frac{2}{(1+4u^2)^{5/2}} 8u = - \frac{24 u}{(1+4u^2)
 \vspace{\baselineskip}
 
 Any simple, smooth, regular, closed, convex plane curve has at least 4 vertices. A curve is simple if it has no sell intersections. A closed curve is called convex if it is always on one side of its tangent line.
+
+For the proof see Do Carmo's book (section 1.78)
