--- a/Electromagnetism/Electromagnetism.tex
+++ b/Electromagnetism/Electromagnetism.tex
@@ -16,6 +16,20 @@
 \renewcommand{\leq}{\leqslant}
 \renewcommand{\geq}{\geqslant}
 
+%Make compatible with copy pasteing from Corey's tex
+\newcommand{\sech}{\mathrm{sech} \,}
+\newcommand{\bra}[1]{\langle #1|}
+\newcommand{\ket}[1]{|#1\rangle}
+\newcommand{\braket}[2]{\langle #1|#2\rangle}
+\newcommand{\set}[1]{\{#1\}}
+\newcommand{\pd}[2]{\dfrac{\partial #1}{\partial #2}}
+\newcommand{\od}[2]{\dfrac{d #1}{d #2}}
+\newcommand{\Nab}{\vec{\nabla}}
+\newcommand{\dop}[2]{\vec{#1}\cdot\vec{#2}}
+\newcommand{\lap}{\nabla^2}
+\newcommand{\dprime}{\prime\prime}
+%See repo for his version
+
 \title{Electromagnetism}
 
 \date{}
