--- a/Differential Geometry/lecture2.tex
+++ b/Differential Geometry/lecture2.tex
@@ -34,7 +34,7 @@ Let $\alpha : I \rightarrow \mathbb{R}^n$ be smooth and regular, $l : I \rightar
 
 We show $l^{-1}$ is a parameter change.
 
-$$l : I \rightarrow \mathbb{R}$ \, \, \, \, $l(t) = \int_{t_0}^t || \alpha ' (s) || ds$$.
+$$l : I \rightarrow \mathbb{R} \, \, \, \, l(t) = \int_{t_0}^t || \alpha ' (s) || ds$$.
 
 $$\implies l' (t) = || \alpha ' (t) || > 0$$
 
