--- a/Dynamical Systems/lecture3.tex
+++ b/Dynamical Systems/lecture3.tex
@@ -27,7 +27,7 @@ If we identify $x$ with $x + 2\pi$, then phase space becomes $S \times \mathbb{R
 
 Phase flow tells us how a system evolves in time. Let $x_0 \in M$ ($M$ phase space) be the state vector (i.e. configuration of the system) at $t=0$. Let the system evolve in time while obeying the laws of the dynamical systems. $\dot{x} = F (x, t)$
 
-Denote the state that the system has evolved to at time $t$ as $x(t) = g^t x_0$. This define a map on the phase space. $g^t : M \rightarrow M$. In general this is a one dimensional group of diffeomorphism. This is a group because $\underbrace{g^r}_{\text{r seconds of waiting}} \underbrace{g^s x_0}_{\text{system after s seconds}} = g^{r+s} x_0 = g^s (g^r x_0)$, the inverse is $g^{-r} g^r x_0 = \underbrace{g^0}_{\text{identity}} x_0 = x_0$.
+Denote the state that the system has evolved to at time $t$ as $x(t) = g^t x_0$. This define a map on the phase space. $g^t : M \rightarrow M$. In general this is a one dimensional group of diffeomorphism. This is a group because $g^r \underbrace{g^s x_0}_{\mathclap{\text{system after s seconds}}} = g^{r+s} x_0 = g^s (g^r x_0)$, the inverse is $g^{-r} g^r x_0 = \underbrace{g^0}_{\mathclap{\text{identity}}} x_0 = x_0$.
 
 Trajectory through the point $x_0$ is defined to be $\{x \in M | x = g^t x_0 \, \, \text{for some} \, \, t \in \mathbb{R}\}$.
 
