--- a/Statistical Mechanics/stat-mech.tex
+++ b/Statistical Mechanics/stat-mech.tex
@@ -15,6 +15,7 @@
 \usepackage{biblatex}
 \renewcommand{\leq}{\leqslant}
 \renewcommand{\geq}{\geqslant}
+\newcommand{\pd}[2]{\dfrac{\partial #1}{\partial #2}}
 
 \title{Statistical Mechanics}
 
@@ -28,5 +29,7 @@
 
 \input{lecture1.tex}
 \input{lecture2.tex}
+\input{lecture3.tex}
+\input{lecture4.tex}
 
 \end{document}
