--- a/Dynamical Systems/Dynamical.tex
+++ b/Dynamical Systems/Dynamical.tex
@@ -14,6 +14,7 @@
 \usepackage{url}
 \usepackage{biblatex}
 \usepackage{epstopdf}
+\usepackage{mathtools}
 \renewcommand{\leq}{\leqslant}
 \renewcommand{\geq}{\geqslant}
 
@@ -30,5 +31,6 @@
 \input{lecture1.tex}
 \input{lecture2.tex}
 \input{lecture3.tex}
+\input{lecture4.tex}
 
 \end{document}
