--- a/Electromagnetism/Electromagnetism.tex
+++ b/Electromagnetism/Electromagnetism.tex
@@ -13,6 +13,7 @@
 \usepackage{wrapfig}
 \usepackage{url}
 \usepackage{biblatex}
+\usepackage{mathtools}
 \renewcommand{\leq}{\leqslant}
 \renewcommand{\geq}{\geqslant}
 
@@ -43,5 +44,6 @@
 \input{lecture1.tex}
 \input{lecture2.tex}
 \input{lecture3.tex}
+\input{lecture4.tex}
 
 \end{document}
