--- a/QM/QM.tex
+++ b/QM/QM.tex
@@ -13,6 +13,7 @@
 \usepackage{wrapfig}
 \usepackage{url}
 \usepackage{biblatex}
+\usepackage{braket}
 \renewcommand{\leq}{\leqslant}
 \renewcommand{\geq}{\geqslant}
 
@@ -28,5 +29,7 @@
 
 \input{lecture1.tex}
 \input{lecture2.tex}
+\input{lecture3.tex}
+\input{lecture4.tex}
 
 \end{document}
