--- a/Differential Geometry/lecture2.tex
+++ b/Differential Geometry/lecture2.tex
@@ -10,9 +10,15 @@ Recall $\alpha (s) = (\cos s, \sin s)$ was the unit circle. But the parametrisat
 
 Definition: Let $\alpha : I \rightarrow \mathbb{R}^n$ be smooth and regular. A patameter change for $\alpha$ is a map $h : J \rightarrow I$ and $J \subset \mathbb{R}$ an open interval such that: $h$ is smooth, $h(t)' \neq 0$ $\, \, \forall t \in J$ and $h(J) = I$.
 
+\vspace{\baselineskip}
+
 Remark: $\tilde{\alpha} = \alpha \cdot h : J \rightarrow \mathbb{R}^n$ is a patametrisation of $\alpha (I) = \tilde{\alpha} (J)$, that is that the trace is not changed.
 
+\vspace{\baselineskip}
+
 For regular curves, there is a particular parametrisation such that the curve is unit speed parametrised.
+
+\vspace{\baselineskip}
 
 Definition: Let $\alpha : I \rightarrow \mathbb{R}^n$ be smooth and regular. The arc length of $\alpha$ measured from $\alpha (u_0)$ with $u_0 \in I$ is the function $l : I \rightarrow \mathbb{R}$, with $$l (u) = \int_{u_0}^u || \alpha ' (t) || dt$$
 
