--- a/Differential Geometry/lecture1.tex
+++ b/Differential Geometry/lecture1.tex
@@ -63,7 +63,7 @@ If $||\alpha ' (u) || = 1$ $\forall u \in I$ then $\alpha$ is called unit speed.
 
 \begin{itemize}
 
-\item[a)] The unit circle $\alpha \mathbb{R} \rightarrow R^2$, $\alpha (s) = (\cos s, \sin s)$. Then $\alpha ' (s) = (-\sin s, \cos s)$ $\implies$ $||\alpha ' (u) || = 1$. $\alpha$ is therefore unit speed.
+\item[a)] The unit circle $\alpha : \mathbb{R} \rightarrow R^2$, $\alpha (s) = (\cos s, \sin s)$. Then $\alpha ' (s) = (-\sin s, \cos s)$ $\implies$ $||\alpha ' (u) || = 1$. $\alpha$ is therefore unit speed.
 \item[b)] Helix $\alpha : \mathbb{R} \rightarrow \mathbb{R}^3$ with $\alpha (u) = (\cos u, \sin u, u)$. Therefore $\alpha ' (u) = (- \sin u, \cos u, 1)$ and therefore $||\alpha ' (u) || = \sqrt{2}$
 \item[c)] $\alpha : \mathbb{R} \rightarrow \mathbb{R}^3$ with $\alpha (u) = (u^3 - u, u^2 -1)$. Thus $\alpha (-1) = \alpha(1) = (0,0)$. $\alpha ' (u) = (3u^2 - 1, 2u) = 0 \Leftrightarrow 3u^2 = 1 \, \, \text{and} \, \, u = 0$ which are never satisfied. This means $\alpha$ is a regular curve but not one to one.
 
@@ -74,4 +74,3 @@ If $||\alpha ' (u) || = 1$ $\forall u \in I$ then $\alpha$ is called unit speed.
 \includegraphics{img/lect1-1.eps}
 \caption{A plot of the curve from example c}
 \end{figure}
-
