--- a/Differential Geometry/lecture4.tex
+++ b/Differential Geometry/lecture4.tex
@@ -9,7 +9,7 @@ Lecture 4
 \begin{align*}
 \kappa '(u) &= - \frac{3}{2} \frac{ab}{(a^2 \sin^2 u + b^2 \cos^2 u)^{5/2}} \cdot (2a^2 \sin u \cos u - 2b^2 \cos u \sin u) \\
 &= -3 \frac{ab}{(a^2 \sin^2 u + b^2 \cos^2 u)^{5/2}} (a^2 - b^2) \frac{1}{2} \sin (2u) = 0 \\
-&\implies \sin (2u) = 0 \implies u = k \cdot \frac{\pi}{2} \, \, \text{for any} k \in \mathbb{Z}
+&\implies \sin (2u) = 0 \implies u = k \cdot \frac{\pi}{2} \, \, \text{for any} \, \, k \in \mathbb{Z}
 \end{align*}
 
 Now $\kappa(0) = \frac{ab}{b^3}= \frac{a}{b^2} = \kappa(\pi)$ which is the maxima of $\kappa$ and $\kappa(\frac{\pi}{2}) = \frac{b}{a^2} = \kappa(\frac{\pi}{2})$ is the minima of curvature.
@@ -22,7 +22,7 @@ Let $\alpha : I \rightarrow \mathbb{R}^2$ be a smooth regular plane curve with c
 
 Differentiate: $\alpha'(u) = (1, 3u^2)$. Thus $||\alpha'(u)|| = \sqrt{1+9u^4}$ And again: $\alpha''(u) = (0, 6u)$ and thus $\kappa(u) = \frac{6u}{(1+9u^4)^{3/2}} = 0 \implies u = 0$ and thus $\alpha(0) = (0,0)$ is a point of inflection of $\alpha$. However $(0,0)$ is not a vertex.
 
-\subsubsection{Example: A parabola $\alpha(u) = (u, u^2)$}
+\subsubsection*{Example: A parabola $\alpha(u) = (u, u^2)$}
 
 $\alpha'(u) = (1, 2u)$ thus $||\alpha'(u)|| = \sqrt{1+4u^2}$
 
